fix sidebar overflowing property

--- a/src/custom.css
+++ b/src/custom.css
@@ -14,11 +14,7 @@
 }
 
 .btc-search .sui-layout-sidebar{
-    width: 30%;
-}
-
-.btc-search .sui-layout-main {
-    width: 70%;
+    overflow-x: hidden;
 }
 
 .btc-search .sui-layout-sidebar-toggle {
@@ -126,16 +122,6 @@
     padding: 0px;
     border-width: 0px;
     background-color: white;
-}
-
-
-#profileimage {
-    border-radius: 50px;
-    width: 32px;
-    height: 32px;
-    position: absolute;
-    right: 40px;
-    bottom: 12px;
 }
 
 #optionsbar {
